--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,22 +5,57 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+  color: #272727;
+}
+
+main {
+    padding-top: 86   px;
+}
+.hero{
+  background-image: url(../images/hero-bg.png);
+  background-size: cover; 
+  background-repeat: no-repeat;
+  padding: 180px 0;
+}
+
+.tagSection{
+      margin-bottom: 1rem;
+    display: inline-block;
+    border-radius: 27px;
+    border-width: 1px;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    border-color: #ffffff17;
+    background-color: #ffffff1a;
+    color: #ffffff;
+    font-weight: 500;
+}
+
+.tagSection-white{
+      margin-bottom: 1rem;
+    display: inline-block;
+    border-radius: 27px;
+    border-width: 1px;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    border-color: #ffffff17;
+    background-color: #ec8223;
+    color: #ffffff;
+    font-weight: 500;
+}
+
+.bg-colorGreyDark {
+    --tw-bg-opacity: 1;
+    background-color: rgb(20 20 20 / var(--tw-bg-opacity));
+    border: solid 1px #232323;
 }
